tests/specs/ecosystem/evan/ajar/0_1_0.test
evan/ajar/0.1.0
-- deno.lock --
{}
===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /index.ts:75:25
   | 
75 | export default function Ajar<T extends Endpoints>(opts?: {
   |                         ^^^^ this function is missing an explicit return type
   | 
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


